--- a/style.css
+++ b/style.css
@@ -1,46 +1,145 @@
 body {
     display: flex;
     flex-direction: column;
+    margin: 0px;
 }
 
-.header, .footer {
-    background-color: #1F2937;
-    color: white;
+.contents {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    flex: 1;
 }
 
-.quote-section {
-    background-color: #E5E7EB;
-    color: #1F2937;
-    font-size: 36px;
-    font-family: 'light italic';
-    border: solid black;
-}
-
-button {
-    background-color: #3882F6;
-    color: white;
-    font-family: 'Roboto';
-}
-
-a, .header-title-subtext {
-    font-size: 18px;
-    font-family: 'Hero Secondary';
-    color: #E5E7EB
+.header-top {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    padding: 8px;
+    margin: 0px;
 }
 
 .header-logo {
     font-size: 24px;
+    font-family: 'Roboto';
     color: #F9FAF8;
 }
 
 .header-title {
     font-size: 48px;
     font-weight: 900;
-    font-family: 'Hero Main';
+    font-family: 'Hero';
+    border: solid black;
+    width: 400px;
+}
+
+a, .header-title-subtext {
+    font-size: 18px;
+    font-family: 'Hero';
+    color: #E5E7EB
+}
+
+.header-title-subtext {
+    width: 200px;
+}
+
+a {
+    text-decoration: none;
+    margin: 16px;
+}
+
+.photo {
+    border: solid black;
+}
+
+img {
+    width: 400px;
+}
+
+.header-bot {
+    border: solid black;
+    display:flex;
+    justify-content: space-around;
+    margin: 300px;
+    padding: 0px;
+    flex: 1;
+}
+
+.header, .footer {
+    background-color: #1F2937;
+    color: #F9FAF8;
+}
+
+.footer {
+    display: flex;
+    justify-content: center;
+    padding: 24px;
+    font-family: 'Roboto';
 }
 
 .midline-title {
+    display: flex;
+    justify-content: center;
     font-size: 36px;
     font-weight: 900;
-    color: #1F2937
+    color: #1F2937;
+}
+
+.icon-set {
+    display: flex;
+    border: solid black;
+    gap: 50px;
+    justify-content: center;
+    padding: 50px;
+}
+
+.icon-border {
+    border: solid black;
+}
+
+.subtext {
+    border: solid black;
+    width: 100px;
+    display: flex;
+    justify-content: center;
+}
+
+.quote-section {
+    background-color: #E5E7EB;
+    color: #1F2937;
+    font-size: 36px;
+    font-family: 'Roboto';
+    padding: 100px;
+    /* light italic */
+    border: solid black;
+}
+
+button {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border: solid #F9FAF8;
+    font-family: 'Roboto';
+    border-radius: 15px;
+    padding: 0px 25px;
+}
+
+.container {
+    background-color: #3882F6;
+    color: #F9FAF8;
+    border-radius: 5px;
+    display: flex;
+    justify-content: space-around;
+    padding: 50px 0px;
+    margin: 50px 300px;
+}
+
+.container-title {
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.container-text {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
 }
