--- a/style.css
+++ b/style.css
@@ -128,9 +128,9 @@ button {
     color: #F9FAF8;
     border-radius: 5px;
     display: flex;
-    justify-content: space-around;
-    padding: 50px 0px;
-    margin: 50px 300px;
+    justify-content: space-between;
+    padding: 50px 120px;
+    margin: 150px 530px;
 }
 
 .container-title {
