--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ body {
 .header-title {
     font-size: 48px;
     font-weight: 900;
-    font-family: 'Hero';
+    font-family: 'Veranda';
     width: 400px;
 }
 
 a, .header-title-subtext {
     font-size: 18px;
-    font-family: 'Hero';
+    font-family: 'Veranda';
     color: #E5E7EB
 }
 
@@ -74,7 +74,7 @@ img {
     display: flex;
     justify-content: center;
     padding: 24px;
-    font-family: 'Roboto';
+    font-family: 'Times New Roman';
 }
 
 .midline {
@@ -132,7 +132,7 @@ button {
     background-color: #3882F6;
     color: #F9FAF8;
     border: solid #F9FAF8;
-    font-family: 'Roboto';
+    font-family: 'Veranda';
     border-radius: 10px;
     padding: 10px 40px;
 }
@@ -156,4 +156,5 @@ button {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
+    font-family: 'Roboto';
 }
